Bug 443642 - Selection clipboard no longer works with Shift + click
Summary: Selection clipboard no longer works with Shift + click
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.90.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-12 16:16 UTC by Laura David Hurka
Modified: 2022-10-02 19:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laura David Hurka 2021-10-12 16:16:50 UTC
SUMMARY
Since today, selecting text with the Shift key no longer populates the selection clipboard, which forces me to use the clipboard with Ctrl+C and Ctrl+V.
Since Ctrl+C does not affect the selection clipboard, this makes it difficult to conveniently copy a section of text to multiple locations.

STEPS TO REPRODUCE
1. Open Kate or KDevelop with some long text.
2. Click a point in the text.
3. Clear Klipper.
4. Hold Shift and click another point in the text.

OBSERVED RESULT
Nothing is copied to any clipboard. Text is just selected.

EXPECTED RESULT
Selected text is copied to selection clipboard.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.3
Kernel Version: 5.11.0-37-generic (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
The click, Shift+click workflow still works in any other application, and many other ways to populate the selection keyboard in KTextEditor still work.
This includes:
* Select with click-drag-release
* Select with click, Shift + navigation keys
* Select with double-click or triple-click
* Select with double- or triple-click-drag-release

But it doesn’t work with: (I can not confirm that these worked before)
* Select with Ctrl+A
Comment 1 Waqar Ahmed 2022-01-13 07:55:07 UTC
Testing with latest git, selection seems to populate the clipboard. Can you confirm if this is still an issue?

Selection with Ctrl + A won't populate the clipboard, but that is being tracked in a separate bug.
Comment 2 Laura David Hurka 2022-01-14 00:39:18 UTC
> Testing with latest git, selection seems to populate the clipboard. Can you
> confirm if this is still an issue?

It still doesn’t work on KDE Neon user edition, Kate 21.12.1, KF 5.90. :(
Comment 3 Waqar Ahmed 2022-01-14 06:50:14 UTC
> Selection with Ctrl + A won't populate the clipboard, but that is being tracked in a separate bug.

This one got fixed yesterday.

Maybe you can try again, and also make sure that Klipper settings are correct. I am still unable to reproduce. Can you also check whether middle mouse button copy/pasting for selection works? If that works, then it could be a config issue.
Comment 4 Bug Janitor Service 2022-01-29 04:37:32 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Bug Janitor Service 2022-02-13 04:36:33 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 6 Laura David Hurka 2022-02-13 15:54:13 UTC
I tested this on my other computer, which has KDE Neon developer edition, with KF 5.91 and Kate 22.03.70.

It still doesn’t work as I described in “Steps to reproduce”.

But it works if I do “Hold shift and click-and-drag somewhere else” instead of step 4.
I. e. I need to do a slight mouse movement during the second click.
Comment 7 Christoph Cullmann 2022-02-13 20:01:15 UTC
Hmm, true, can reproduce that :( Even with the current master branch.
Comment 8 Christoph Cullmann 2022-10-02 19:33:35 UTC
Git commit d320988fb7bfd034288ec5e2495323474426ac9e by Christoph Cullmann.
Committed on 02/10/2022 at 19:33.
Pushed by cullmann into branch 'master'.

fix clipboard selection update on shift mouse click

M  +5    -0    src/view/kateviewinternal.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/d320988fb7bfd034288ec5e2495323474426ac9e
Comment 9 Christoph Cullmann 2022-10-02 19:37:20 UTC
Ok, should be fixed.