fix clipboard selection update on shift mouse click

BUG: 443642